[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/navigation/move_right_active_128.png" type="Texture" id=1]
[ext_resource path="res://assets/navigation/move_left_128.png" type="Texture" id=2]
[ext_resource path="res://assets/navigation/move_right_128.png" type="Texture" id=3]
[ext_resource path="res://assets/navigation/move_left_active_128.png" type="Texture" id=4]
[ext_resource path="res://src/Navigation/Navigation.gd" type="Script" id=5]
[ext_resource path="res://assets/object/item/gulungan.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/Mission/MissionInterface.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/object/btn/btn_setting.png" type="Texture" id=8]
[ext_resource path="res://assets/object/item/tas.png" type="Texture" id=9]
[ext_resource path="res://assets/object/btn/btn_retry.png" type="Texture" id=10]
[ext_resource path="res://assets/object/btn/btn_back_to_menu.png" type="Texture" id=11]
[ext_resource path="res://assets/object/btn/Quit.png" type="Texture" id=12]
[ext_resource path="res://assets/object/btn/action_btn.png" type="Texture" id=13]
[ext_resource path="res://assets/object/btn/action_btn_active.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Navigation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/UserInterface/MenuFirst/FirstMenu.tscn"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -144.0
margin_right = 280.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Touch_left" type="TouchScreenButton" parent="HBoxContainer"]
normal = ExtResource( 2 )
pressed = ExtResource( 4 )

[node name="Touch_Right" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 140, 0 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )

[node name="BoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -22.5
margin_right = 52.0
margin_bottom = 17.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Touch_Mission" type="TouchScreenButton" parent="BoxContainer"]
scale = Vector2( 0.125786, 0.125786 )
normal = ExtResource( 6 )

[node name="MissionInterface" parent="." instance=ExtResource( 7 )]
visible = false
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 66.0
margin_top = -64.0
margin_right = 322.0
margin_bottom = 64.0

[node name="EquipmentContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -76.0
margin_right = -66.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRightContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -61.0
margin_top = 14.0
margin_right = -28.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchSetting" type="TouchScreenButton" parent="TopRightContainer"]
normal = ExtResource( 8 )

[node name="TopRightContainer2" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -20.0
margin_right = -21.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchEquipment" type="TouchScreenButton" parent="TopRightContainer2"]
position = Vector2( 0, 3 )
scale = Vector2( 0.138408, 0.138408 )
normal = ExtResource( 9 )

[node name="PauseOverlay" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.384314 )

[node name="Title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.5
margin_top = 105.0
margin_right = 42.5
margin_bottom = 134.0
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -67.0
margin_right = 76.5
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchRetry" type="TouchScreenButton" parent="PauseOverlay/VBoxContainer"]
normal = ExtResource( 10 )

[node name="TouchBackMenu" type="TouchScreenButton" parent="PauseOverlay/VBoxContainer"]
position = Vector2( 0.5, 47 )
normal = ExtResource( 11 )

[node name="TouchQuit" type="TouchScreenButton" parent="PauseOverlay/VBoxContainer"]
position = Vector2( 0.5, 94 )
normal = ExtResource( 12 )

[node name="BackgroundTextureAct" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -181.0
margin_top = -144.0
margin_right = -116.0
margin_bottom = -80.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentTexture" type="TextureRect" parent="BackgroundTextureAct"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 40 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="BackgroundTextureAct"]
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
shape = SubResource( 1 )
[connection signal="pressed" from="HBoxContainer/Touch_left" to="." method="_on_Touch_left_pressed"]
[connection signal="released" from="HBoxContainer/Touch_left" to="." method="_on_Touch_left_released"]
[connection signal="pressed" from="HBoxContainer/Touch_Right" to="." method="_on_Touch_Right_pressed"]
[connection signal="released" from="HBoxContainer/Touch_Right" to="." method="_on_Touch_Right_released"]
[connection signal="pressed" from="BoxContainer/Touch_Mission" to="." method="_on_Touch_Mission_pressed"]
[connection signal="pressed" from="TopRightContainer/TouchSetting" to="." method="_on_TouchSetting_pressed"]
[connection signal="pressed" from="TopRightContainer2/TouchEquipment" to="." method="_on_TouchEquipment_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/TouchRetry" to="." method="_on_TouchRetry_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/TouchBackMenu" to="." method="_on_TouchBackMenu_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/TouchQuit" to="." method="_on_TouchQuit_pressed"]
